<resources>
    <string name="app_name">FOODS</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="moneyText">%1s ₺</string>
    <string name="foodUrl">http://kasimadalan.pe.hu/yemekler/resimler/%1s</string>
    <string name="plusText">+%1s</string>
    <string name="addBtnText">Add to basket</string>
    <string name="deleteBtnText">Delete</string>
    <string name="changeBtnText">Change basket</string>
    <string name="totalText">Total: %1s ₺</string>
    <string name="basketProductsText">- %1s Product</string>
    <string name="basketCheckText">%1s Product</string>
    <string name="walletText"> Wallet: %1s ₺</string>
    <string name="myBasketText">Basket</string>
    <string name="orderNo">Order No: %1s</string>
    <string name="orderAddress">Address: %1s</string>
    <string name="orderProduct">Products received: %1s Product</string>
    <string name="orderWallet">Payment method: Wallet</string>
    <string name="orderCard">Payment method: Card</string>
    <string name="totalCost">Total cost: %1s ₺</string>
    <string name="userBalance">: %1s ₺</string>
    <string name="orderTook">Your order has been taken</string>
    <string name="orders">Orders</string>
    <string name="favorites">Favorites</string>
    <string name="register">REGISTER</string>
    <string name="registered">Successfully registered, it is login.</string>
    <string name="noAddress">Address cannot be left blank!</string>
    <string name="wrongCard">Wrong card number, must be 16 digits!</string>
    <string name="noBalance">Insufficient balance!</string>
    <string name="controlInternet">Check your network connection!</string>
    <string name="az">Name A-Z</string>
    <string name="za">Name Z-A</string>
    <string name="price0">Price 0-∞</string>
    <string name="price1">Price ∞-0</string>
    <string name="all">All</string>
    <string name="food">Food</string>
    <string name="drink">Drink</string>
    <string name="sweet">Sweet</string>
    <string name="blankEmailPass">Email and password cannot be left blank!</string>
    <string name="total">Total:</string>
    <string name="card_wallet">Card / Wallet</string>
    <string name="credit_card_number">Credit card number</string>
    <string name="address">Address</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="add_favorites_and_delete">Add favorites and delete</string>
    <string name="delete">Delete</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="registerS">Register</string>
    <string name="password_again">Password again</string>
    <string name="basket_is_emty">Basket is Emty :(</string>
    <string name="tr_eng">TR / ENG</string>
    <string name="white_dark">WHITE / DARK</string>
    <string name="load_image">Load Image</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="load_balance">Load Balance</string>
    <string name="log_out">Log Out</string>
    <string name="card">Card</string>
    <string name="wallet">Wallet</string>
    <string name="confirm_basket">Confirm basket</string>
    <string name="profile">Profile</string>
    <string name="sectionsBlank">Sections cannot be left blank!</string>
    <string name="wrongPassword">Passwords do not match!</string>
</resources>